save person and show all people

--- a/src/main/webapp/WEB-INF/views/all_books.html
+++ b/src/main/webapp/WEB-INF/views/all_books.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Все пользователи</title>
+  <title>Все книги</title>
 </head>
 <body>
 <table>
@@ -22,7 +22,7 @@
     <td><span th:text="${book.id}"> Id </span></td>
     <td><span th:text="${book.title}"> Title </span></td>
     <td><span th:text="${book.author}"> Author </span></td>
-    <td><span th:text="${book.id_person}"> ID Person </span></td>
+    <td><span th:text="${book.person}"> ID Person </span></td>
   </tr>
   </tbody>
 </table>
