--- a/src/main/webapp/WEB-INF/views/all_person.html
+++ b/src/main/webapp/WEB-INF/views/all_person.html
@@ -5,7 +5,7 @@
     <title>Все пользователи</title>
 </head>
 <body>
-<table>
+<table class="table">
   <thead>
   <tr>
     <th> Id </th>
@@ -22,7 +22,33 @@
     <td><span th:text="${person.firstName}"> First name </span></td>
     <td><span th:text="${person.secondName}"> Second name </span></td>
   </tr>
+
   </tbody>
 </table>
+<style type="text/css">
+  .table{
+    border: 1px solid #eee;
+    table-layout: fixed;
+    width: 50%;
+    margin-bottom: 20px;
+  }
+  .table th {
+    font-weight: bold;
+    padding: 5px;
+    background: #efefef;
+    border: 1px solid #dddddd;
+  }
+  .table td{
+    padding: 5px 10px;
+    border: 1px solid #eee;
+    text-align: left;
+  }
+  .table tbody tr:nth-child(odd){
+    background: #fff;
+  }
+  .table tbody tr:nth-child(even){
+    background: #F7F7F7;
+  }
+</style>
 </body>
 </html>
